force-app/main/default/objects/LeanData__LD_Dataset_Row__c/LeanData__LD_Dataset_Row__c.object-meta.xml
<CustomObject>
    <label>Dataset Row</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataset Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>