force-app/main/default/objects/LeanData__LD_Dataset_Row__c/fields/LeanData__Column_15__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Column_15__c</fullName>
    <label>Column 15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>