force-app/main/default/objects/LeanData__LD_Dataset_Row__c/fields/LeanData__Row_ID__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Row_ID__c</fullName>
    <externalId>true</externalId>
    <label>Row ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>